unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/FS_Proforma_Batch_Settings__mdt.object-meta.xml
<CustomObject>
    <label>FS Proforma Batch Settings</label>
    <pluralLabel>FS Proforma Batch Settings</pluralLabel>
</CustomObject>