unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Batch_Job_Size__c.field-meta.xml
<CustomField>
    <fullName>FS_Batch_Job_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>Number of records to process in a single batch. Lower this value if you are running into Too Many SOQL Queries exception or Apex CPU Timeout Exception</inlineHelpText>
    <label>Batch Job Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>