unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Complementary_Member_Price_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Complementary_Member_Price_Id__c</fullName>
    <inlineHelpText>Comma Separated list of price rules containing complimentary prices.</inlineHelpText>
    <label>Complementary Member Price Ids</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>