unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Firm_Billing_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>FS_Firm_Billing_Contribution_Amount__c</fullName>
    <inlineHelpText>The amount to put in the General Contribution Line for Sales Orders with Firm Billing.</inlineHelpText>
    <label>Firm Billing Contribution Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>