unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_General_Contribution_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contribution_Id__c</fullName>
    <inlineHelpText>Id of the General Contribution Item</inlineHelpText>
    <label>General Contribution Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>