unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_General_Donation_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Donation_Item_Id__c</fullName>
    <label>General Donation Item Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>