unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Individual_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>FS_Individual_Contribution_Amount__c</fullName>
    <inlineHelpText>The amount placed on the sales order for the General Contribution amount that the individual can donate.</inlineHelpText>
    <label>Individual Contribution Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>