unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Law_Student_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_Student_Item_Id__c</fullName>
    <inlineHelpText>Comma separated Ids of the law student items</inlineHelpText>
    <label>Law Student Item Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>