unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Posting_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>FS_Posting_Batch_Size__c</fullName>
    <description>The size of the batch used for posting Sales Orders. This job runs after all the SOL are added to the SO and is more CPU intensive.</description>
    <inlineHelpText>The size of the batch used for posting Sales Orders. This job runs after all the SOL are added to the SO and is more CPU intensive.</inlineHelpText>
    <label>Posting Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>