unpackaged/main/default/objects/FS_Proforma_Batch_Settings__mdt/fields/FS_Section_Renewal_Dues_Item_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Section_Renewal_Dues_Item_Class_Id__c</fullName>
    <inlineHelpText>Id of the Section Renewal Dues Item Class</inlineHelpText>
    <label>Section Renewal Dues Item Class Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>